<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KillerChair</string>
    <string name="notification_channel_name">Timer status</string>
    <string name="notification_channel_description">Remaining sitting time,Time goes over alert ,break time</string>
    <string name="stop">Stop</string>
    <string name="take_break">Take a break</string>
    <string name="mins">mins</string>

    <!--Notification content-->
    <string name="time_remaining">Time remaining: </string>
    <string name="sitting_time_finished">"You're setting for a long time!!"</string>
    <string name="break_time_finished">Your break is over go back to work</string>

    <!-- Preference Titles -->
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>

    <!-- General Preferences -->
    <string name="sitting_time">Sitting Time :</string>
    <string name="isbreak">Take a break</string>
    <string name="break_time">Break Time :</string>

    <!-- Sound Preferences -->
    <string name="alarm_title">Display an Alarm</string>
    <string name="alarm_summary_on">Display an Alarm when the timer goes over</string>
    <string name="alarm_summary_off">Only show notification when the timer goes over</string>
    <!-- theme Preferences -->
    <string name="darktheme_title">Dark Theme</string>
    <string name="back_button_description">back button</string>
    <string name="settings_button_description">settings</string>
    <string name="stop_button_description">Stop</string>
    <string name="info">Info</string>
    <string name="info_summary">
        Killer Chair
        \nversion 1.0
        \n©2020 Breair Sabir Inc.</string>
    <string name="zero_time">00:00</string>
    <string name="quote">quote here</string>
    <string name="reset">RESET</string>
    <string name="start">START</string>
</resources>