<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">

        <SeekBarPreference
            android:max="@integer/max_interval"
            app:adjustable="true"
            app:key="SittingInterval"
            app:min="@integer/min_interval"
            app:seekBarIncrement="@integer/increment"
            app:showSeekBarValue="true"
            app:title="@string/sitting_time"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="break"
            app:title="@string/isbreak" />
        <SeekBarPreference
            android:max="@integer/max_break"
            app:adjustable="true"
            app:dependency="break"
            app:key="breaktime"
            app:min="@integer/min_break"
            app:seekBarIncrement="@integer/increment"
            app:showSeekBarValue="true"
            app:title="@string/break_time" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="alarm"
            app:summaryOff="@string/alarm_summary_off"
            app:summaryOn="@string/alarm_summary_on"
            app:title="@string/alarm_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/theme">
        <SwitchPreference
            android:defaultValue="false"
            android:key="is_dark_theme"
            app:title="@string/darktheme_title" />
    </PreferenceCategory>


</PreferenceScreen>